# The-Final-Project

./: MYGUI.py  Makefile  Pipfile  Rand.py  bs.py  linked_list.py
.devcontainer/: devcontainer.json  postCreate.sh
Front/: index.html  style.css
app/: pyproject.toml
app/app/: main.py
app/myProject/myApp/: api.py  models.py
app/myProject/myProject/: settings.py  urls.py
