[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["bsirikam <buntakan0703@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.2.3"
uvicorn = "^0.21.1"
django = "^4.1.7"
django-ninja = "^0.21.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
